DOMMatrix converts double into float
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
People
(Reporter: saschanaz, Assigned: saschanaz)
References
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:69.0) Gecko/20100101 Firefox/69.0
Steps to reproduce:
new DOMMatrix([.9, .8, .7, .6, .5, .4])
Actual results:
DOMMatrix { a: 0.8999999761581421, b: 0.800000011920929, c: 0.699999988079071, d: 0.6000000238418579, e: 0.5, f: 0.4000000059604645, m11: 0.8999999761581421, m12: 0.800000011920929, m13: 0, m14: 0 }
Expected results:
DOMMatrix { a: 0.9, b: 0.8, c: 0.7, d: 0.6, e: 0.5, f: 0.4, m11: 0.9, m12: 0.8, m13: 0, m14: 0 }
The spec defines the constructor argument and attributes as unrestricted double
s and yet the implementation internally uses float
.
Hi, I was able to reproduce this issue on my machine with Firefox Release 67, Firefox Beta 68.0b9 and Nightly 69.0a1.
Assignee | ||
Comment 2•2 years ago
|
||
DOMMatrix now internally uses double instead of float. This only fixes DOMMatrix internals so we still have to work on Servo CSS Parser to pass doubles instead of floats.
![]() |
||
Comment 3•2 years ago
|
||
Hmm. Did the spec use to say float or something?
Assignee | ||
Comment 4•2 years ago
|
||
No prose requires a specific type but the IDL consistently uses unrestricted double
.
Pushed by bzbarsky@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a488599483ee Use double for DOMMatrix r=bzbarsky
Comment 6•2 years ago
|
||
bugherder |
Updated•2 years ago
|
Comment 7•2 years ago
|
||
I assume this can ride the trains. Please reset status and request uplift if not.
Description
•